TU-34: Added endpoint for fetching single event
